# buddy_agent

./: .env.example  .gitignore  2026-06-25.html  2026-06-26.html  2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  CLAUDE.md  DIAGRAM.md  config.yaml  index.html  pyproject.toml
.github/workflows/: daily-digest.yml
news_buddy/: __main__.py  agent.py  archive_writer.py  backfill_rag.py  extract.py  feeds.py  html_writer.py  llm.py  observability.py  rag.py  rubric.py  search.py  semantic_search_cli.py  slack_notify.py  state.py  telegram_notify.py  tools.py
prompts/: curator.md  summarizer.md
