[project]
name = "news-buddy"
version = "0.1.0"
description = "Daily news curation agent built on deepagents with local Ollama models"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6",
    "langchain",
    "langchain-ollama",
    "feedparser",
    "trafilatura",
    "httpx",
    "pyyaml",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_buddy"]
