[project]
name = "news-buddy"
version = "0.1.0"
description = "Daily news curation agent built on deepagents with local Ollama models"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6",
    "langchain",
    "langchain-ollama",
    "langchain-google-genai",
    "langgraph>=1.0",
    "arize-phoenix",
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
    "chromadb",
    "feedparser",
    "trafilatura",
    "httpx",
    "pyyaml",
    "python-dotenv",
    "tenacity",
]

[project.scripts]
news-buddy = "news_buddy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_buddy"]
